          compiled against freetds 0.83 or later
        - Fix leakage of $schema on in-memory new_related() calls
        - Fix more cases of $schema leakage in SQLT::Parser::DBIC
        - Fix leakage of $storage in ::Storage::DBI::Oracle
        - Fix pessimization of Oracle RowNum limit dialect query when no
          offset has been specified
        - Remove useless vestigial pessimization in Ordered.pm for cases 
          when the position column is part of a unique constraint
        - Fix dbicadmin to no longer ignore the documented 'config' option
        - The schema-resultsource entanglement is now much more robust
          under threads
        - t/53lean_startup.t adjusted for new 5.15.x base.pm behavior

    * Misc
        - Centralized leak-checks for all instances of DBICTest::Schema
          from within any test
        - Now passes all tests with Test::Builder 1.005
        - Codebase is now trailing-whitespace-free
        - Cleanup of complex resultset update/delete oprations - storage
          specific code moved back to ResultSet and replaced by checks
          of storage capabilities
        - Fixed carp_once only emitting one single warning per package
          regardless of warning content

0.08196 2011-11-29 05:35 (UTC)
    * Fixes
        - Fix tests for DBD::SQLite >= 1.34.
        - Fix test failures with DBICTEST_SQLITE_USE_FILE set
        - Fix the find() condition heuristics being invoked even when the
          call defaults to 'primary' (i.e. when invoked with bare values)
        - Throw much clearer error on incorrect inflation spec
        - Fix incorrect storage behavior when first call on a fresh schema
          is with_deferred_fk_checks
        - Fix incorrect dependency on Test::Simple/Builder (RT#72282)
        - Fix uninitialized warning in ::Storage::Sybase::ASE
        - Improve/cache  DBD-specific datatype bind checks (also solves a
          nasty memleak with version.pm on multiple ->VERSION invocations)